--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "homepage" : "https://almeidatamires.github.io/github-interface/"
   },
   "scripts": {
     "start": "react-scripts start",
