--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{  "homepage" : "https://almeidatamires.github.io/github-interface/",
+{ "homepage" : "https://almeidatamires.github.io/github-interface/", 
   "name": "github-api",
   "version": "0.1.0",
   "private": true,
@@ -15,12 +15,12 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
